<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">aditya_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_answer">Answer</string>
<string name="msg_know_your_colle">Know Your College</string>
<string name="lbl_faculties_of">Faculties of </string>
<string name="lbl_eg_iit_bombay">Eg : IIT Bombay</string>
<string name="lbl_reviews">Reviews</string>
<string name="lbl_branch">Branch</string>
<string name="lbl_mentor">Mentor</string>
<string name="msg_annual_package2">Annual Package of </string>
<string name="lbl_live">Live</string>
<string name="lbl_home">Home</string>
<string name="msg_faculties_of_ii">Faculties of IIT BOMBAY</string>
<string name="lbl_phone_number">Phone Number</string>
<string name="lbl_score">Score</string>
<string name="msg_kindly_register">KINDLY REGISTER TO ACCESS THE PREMIUM FEATURES</string>
<string name="lbl_live_session">Live Session</string>
<string name="lbl_log_out">Log Out</string>
<string name="lbl_mentor_connect">Mentor Connect</string>
<string name="msg_eg_elonmusk_g">Eg : Elonmusk@gmail.com</string>
<string name="lbl_suggestions">Suggestions :</string>
<string name="lbl_question">Question</string>
<string name="msg_eg_mechanical">Eg : Mechanical Engineering</string>
<string name="lbl_varanasi">Varanasi</string>
<string name="lbl_reviews_of">Reviews of </string>
<string name="lbl_link">LINK</string>
<string name="lbl_email_id">Email Id</string>
<string name="msg_search_for_anyt">Search for anything related to colleges...</string>
<string name="msg_campus_of_iit_b">Campus of IIT BOMBAY</string>
<string name="lbl_fees">Fees</string>
<string name="msg_name_of_college">Name of College &amp; Branch</string>
<string name="lbl_amit_tiwari">Amit Tiwari</string>
<string name="lbl_title_of_blog">Title of Blog</string>
<string name="lbl_scheduled_calls">Scheduled Calls</string>
<string name="msg_click_here_to_v2">Click here to view all the Pending Sessions( a drop down occurs)</string>
<string name="msg_click_here_to_v3">Click here to view all the doubts posted by students</string>
<string name="msg_reviews_of_iit">Reviews of IIT BOMBAY</string>
<string name="msg_college_predict">College Predictor</string>
<string name="msg_community_secti">Community Section</string>
<string name="lbl_yeswanth_rao">Yeswanth Rao</string>
<string name="msg_connect_with_th">CONNECT WITH THE MENTOR</string>
<string name="lbl_details">Details</string>
<string name="lbl_stream">Stream</string>
<string name="lbl_elon_musk">Elon Musk</string>
<string name="lbl_payment_link">Payment Link</string>
<string name="lbl_sarthak_gupta">Sarthak Gupta</string>
<string name="lbl_eg_elon_musk">Eg : Elon Musk</string>
<string name="lbl_annual_package">Annual Package</string>
<string name="lbl_iit_bombay">IIT BOMBAY</string>
<string name="lbl_eg_123">Eg : 123</string>
<string name="lbl_about_us2">About us</string>
<string name="lbl_campus_of">Campus of </string>
<string name="lbl_eg_1234567890">Eg : 1234567890</string>
<string name="msg_click_to_view_a">Click to view all Notification</string>
<string name="msg_add_group_pictu">Add Group Picture</string>
<string name="lbl_city">City</string>
<string name="lbl_whatsapp_number">Whatsapp Number</string>
<string name="lbl_photos">Photos</string>
<string name="msg_annual_package">Annual Package of IIT BOMBAY</string>
<string name="lbl_category">Category</string>
<string name="msg_of_which_you_wa">Of which You want to connect to the mentor</string>
<string name="lbl_clear_doubts">Clear Doubts</string>
<string name="msg_college_selecti">College Selection ke Liye College ke Ground Reality Janana Chahte ho, Apne dil dimag ke sabhi doubts ko Clear Karne ke liye</string>
<string name="lbl_college">College(</string>
<string name="lbl_menu">Menu</string>
<string name="lbl_placenments">Placenments</string>
<string name="msg_get_your_desire">Get Your Desired Branch in Your Desired College with our Rank vs College Predictor.
Get the True Informations of Your Desired College
Get Real Insights of Your College from Live Mentors studying in the college
Get The Real Time Info Required for Counselling.
Get Personalised Doubts Clarity.
Connect With Your Fellow Batch Mates.
Ask Your Doubts In The QnA Section for free</string>
<string name="lbl_qna_section">QnA Section</string>
<string name="lbl_about_us">About Us</string>
<string name="lbl_eg_general">Eg : General</string>
<string name="lbl_qna">QnA</string>
<string name="msg_kindly_login_to">Kindly Login to continue</string>
<string name="lbl_name">Name</string>
<string name="msg_pending_session">Pending Sessions</string>
<string name="lbl_become_a_mentor">Become A Mentor</string>
<string name="lbl_profile">Profile</string>
<string name="lbl_keyboard">KeyBoard</string>
<string name="msg_get_real_insigh">GET REAL INSIGHTS OF YOUR DREAM COLLEGE</string>
<string name="lbl_register">Register</string>
<string name="lbl">)</string>
<string name="lbl_submit">Submit</string>
<string name="lbl_iit_bombay2">IIT Bombay</string>
<string name="lbl_photo">Photo</string>
<string name="msg_eg_what_is_th">Eg : What is the best COllege?</string>
<string name="lbl_year">Year</string>
<string name="lbl_ask_your_doubts">Ask Your Doubts</string>
<string name="msg_eg_second_yea">Eg : Second Year</string>
<string name="lbl_live_sessions">Live Sessions</string>
<string name="lbl_notfications">Notfications</string>
<string name="lbl_kyc">KYC</string>
<string name="msg_detailis_of_the">Detailis of the person like college and branch</string>
<string name="lbl_college2">College</string>
<string name="msg_college_of_whic">College(Of which You want to connect to the mentor)</string>
<string name="msg_click_here_to_v">Click here to view all the calls( a drop down occurs)</string>
<string name="lbl_connect">Connect</string>
<string name="lbl_1234567890">1234567890</string>
<string name="msg_about_who_we_ar">About Who we are and all it\u2019s Details will Mentioned Here</string>
<string name="msg_book_a_live_1_o">Book a Live 1-on-1 session with our on Mentors</string>
<string name="msg_elonmusk_gmail">Elonmusk@gmail.com</string>
<string name="msg_kyc_a_one_stop">KYC- A One Stop Solution for All Students Participating in the A.K.T.U Counselling. KYC is here to give you real time assistant.</string>
<string name="msg_photo_clicking">Photo CLicking here takes us to another page of where blog is mentioned</string>
<string name="msg_frequently_aske">Frequently Asked Questions ?</string>
<string name="lbl_full_name">Full Name</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
