<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="liveSessionVM" type="com.adityasapplication.app.modules.livesession.data.viewmodel.LiveSessionVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLIVESESSION"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLiveSession"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{liveSessionVM.liveSessionModel.txtLiveSession}"
            style="@style/txtMontserratromansemibold32" tools:text="@string/lbl_live_session"/>
        <View android:background="@color/gray_400"
            android:id="@+id/lineLineTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_352pxh"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_92pxv"
            android:layout_width="match_parent"
            android:text="@{liveSessionVM.liveSessionModel.txtDescription}"
            style="@style/txtMontserratromansemibold24" tools:text="@string/msg_college_selecti"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtBookaLive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_121pxv"
            android:layout_width="match_parent"
            android:text="@{liveSessionVM.liveSessionModel.txtBookaLive}"
            style="@style/txtMontserratromansemibold24" tools:text="@string/msg_book_a_live_1_o"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegister"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false" style="@style/btnSolidRounded_2" tools:text="@string/lbl_register"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnhome"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_22pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_144pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRowsearch"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <FrameLayout android:id="@+id/frameStacktelevision"
                    android:layout_height="@dimen/_25pxv"
                    android:layout_marginStart="@dimen/_1pxh" android:layout_width="@dimen/_271pxh">
                    <LinearLayout
                        android:id="@+id/linearRowmaterialsymbol"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <LinearLayout android:id="@+id/linearRowhome"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_2pxv"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.82"
                            android:layout_width="0dp" android:orientation="horizontal">
                            <FrameLayout
                                android:id="@+id/frameStackhome"
                                android:layout_height="@dimen/_20pxv"
                                android:layout_marginBottom="@dimen/_1pxv" android:layout_width="@dimen/_21pxh">
                                <ImageView android:id="@+id/imageHome"
                                    android:layout_gravity="start"
                                    android:layout_height="@dimen/_20pxh"
                                    android:layout_width="@dimen/_21pxh"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/img_home"
                                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                                <ImageView
                                    android:id="@+id/imageHomeOne"
                                    android:layout_gravity="start"
                                    android:layout_height="@dimen/_20pxh"
                                    android:layout_width="@dimen/_21pxh"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/img_home"
                                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                            </FrameLayout>
                            <ImageView android:id="@+id/imageTelevision"
                                android:layout_height="@dimen/_20pxh"
                                android:layout_marginStart="@dimen/_59pxh"
                                android:layout_marginTop="@dimen/_1pxv"
                                android:layout_width="@dimen/_20pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_television"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_television"/>
                        </LinearLayout>
                        <ImageView android:id="@+id/imageMaterialsymbol"
                            android:layout_height="@dimen/_19pxh"
                            android:layout_marginBottom="@dimen/_4pxv"
                            android:layout_marginEnd="@dimen/_1pxh"
                            android:layout_marginStart="@dimen/_147pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="@dimen/_22pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_materialsymbol"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_materialsymbol"/>
                    </LinearLayout>
                    <ImageView android:id="@+id/imageSearch"
                        android:layout_gravity="top|end"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_90pxh"
                        android:layout_marginStart="@dimen/_90pxh"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_search"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
                </FrameLayout>
                <ImageView android:id="@+id/imageUser"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_47pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowhomeTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHomeTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.19"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{liveSessionVM.liveSessionModel.txtHomeTwo}"
                    style="@style/txtMontserratromanlight6" tools:text="@string/lbl_home"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDetails"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.21"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{liveSessionVM.liveSessionModel.txtDetails}"
                    style="@style/txtMontserratromanlight6" tools:text="@string/lbl_details"/>
                <TextView android:id="@+id/txtCollegePredict"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_56pxh"
                    android:layout_weight="0.28"
                    android:layout_width="0dp"
                    android:text="@{liveSessionVM.liveSessionModel.txtCollegePredict}"
                    style="@style/txtMontserratromanlight6" tools:text="@string/msg_college_predict"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLive"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_67pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.12"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{liveSessionVM.liveSessionModel.txtLive}"
                    style="@style/txtMontserratromanlight6" tools:text="@string/lbl_live"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtProfile"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_53pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.19"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{liveSessionVM.liveSessionModel.txtProfile}"
                    style="@style/txtMontserratromanlight6" tools:text="@string/lbl_profile"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
